<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
        >
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startActivityVerticalXml"
                android:text="@string/layout_vertical_xml"
                />
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityVerticalJava"
            android:text="@string/layout_vertical_java"
            />
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  >
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="startActivityHorizontalXml"
                android:text="@string/layout_horizontal_xml"
                />
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="startActivityHorizontalJava"
                android:text="@string/layout_horizontal_java"
                />
    </LinearLayout>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="startActivityVertHorXml"
            android:text="@string/layout_verthor_xml"
            />
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="startActivityVertHorJava"
            android:text="@string/layout_verthor_java"
            />
</LinearLayout>

